# UK-Garden-Bird_Classifier

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
resources/20 UK Garden Bird Dataset/: Data_Collection_using_Bing_image_downloader.ipynb
resources/20 UK Garden Bird Experiments/: Model Metrics.xlsx
src/: bird_classes.py  classifier.py  test_classifier.py
src/UK_Garden_Bird_Classifier/: classifier.py  test_classifier.py
